--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-lang-code-flags": "^1.0.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
